# tetris

./: CMakeLists.txt  LICENSE  README.md  buildrun.ps1  debug.ps1
.github/workflows/: cmake-multi-platform.yml  linux.yml  wincl.yml
assets/: score_board.png.1  title_screen.png.2
include/: cg.h  defines.h  definitions.h  renderer.c  renderer.h  tetromino.c  tetromino.h  utils.h
src/: cg.c  main.c  renderer.c  tetromino.c
