cmake_minimum_required(VERSION 3.14)
#################################################################
# **** ---------------------ATTENTION--------------------- **** #
# ****     program CANT be compiled without this macro     **** #
# ```                                                           #
# #define RAYGUI_IMPLEMENTATION //<-- this line is REQUIRED     #
# include <raygui.h>                                            #
# ```                                                           #
#################################################################

#################################################################
###                                  ||                         #
### please modify following vars    \||/                        #
###                                  \/                         #
#################################################################
project(tetris C) # your project name here                        #
set(CMAKE_C_STANDARD 23) # modify it for other vers of C        #
#set(CMAKE_CXX_STANDARD 26) # rm comment to use CPP             #
set(RAYLIB_VERSION 6.0) # modify it for other vers of raylib    #
set(RAYGUI_VERSION 4.0) # modify it for other vers of raygui    #
set(PROJECT_SOURCES_DIRS "src" "include") # your sources here   #
set(PROJECT_INCLUDE_DIRS "include") # your additional libs here #
#################################################################

option(EMBED_ASSETS "Embed all assets into the executable" OFF)

set(SOURCES "")
foreach(dir ${PROJECT_SOURCES_DIRS})
    file(GLOB_RECURSE dir_sources ${dir}/*.c ${dir}/*.cpp)
    list(APPEND SOURCES ${dir_sources})
endforeach()
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

################
# Dependencies #
################
include(FetchContent)

################
# Fetch Raylib #
################
find_package(raylib ${RAYLIB_VERSION} QUIET)
if (NOT raylib_FOUND)
    FetchContent_Declare(
            raylib
            URL https://github.com/raysan5/raylib/archive/refs/tags/${RAYLIB_VERSION}.tar.gz
    )
    FetchContent_GetProperties(raylib)
    if (NOT raylib_POPULATED)
        set(FETCHCONTENT_QUIET NO)
        FetchContent_MakeAvailable(raylib)
    endif()
endif()
################
# Fetch RayGUI #
################
FetchContent_Declare(
        raygui
        URL https://github.com/raysan5/raygui/archive/refs/tags/${RAYGUI_VERSION}.tar.gz
)
FetchContent_GetProperties(raygui)
if (NOT raygui_POPULATED)
    set(FETCHCONTENT_QUIET NO)
    FetchContent_MakeAvailable(raygui)
endif()

##########################
# Optional Asset Embedding
##########################
if(EMBED_ASSETS)
    message(STATUS "Embedding assets into executable")

    macro(_EMBED_ASSET VAR_NAME FILEPATH)
        if(EXISTS "${CMAKE_SOURCE_DIR}/${FILEPATH}")
            file(READ "${CMAKE_SOURCE_DIR}/${FILEPATH}" _data HEX)
            string(REGEX REPLACE "([0-9a-f][0-9a-f])" "0x\\1," ${VAR_NAME}_array "${_data}")
            set(${VAR_NAME}_name "emb_${VAR_NAME}")
        else()
            message(FATAL_ERROR "Asset not found: ${FILEPATH}")
        endif()
    endmacro()

    _EMBED_ASSET(block0 assets/blocks/0.png)
    _EMBED_ASSET(block1 assets/blocks/1.png)
    _EMBED_ASSET(block2 assets/blocks/2.png)
    _EMBED_ASSET(block3 assets/blocks/3.png)
    _EMBED_ASSET(block4 assets/blocks/4.png)
    _EMBED_ASSET(block5 assets/blocks/5.png)
    _EMBED_ASSET(block6 assets/blocks/6.png)
    _EMBED_ASSET(wall_img assets/wall.png)
    _EMBED_ASSET(scboard_img assets/score_board.png)
    _EMBED_ASSET(title_screen assets/title_screen.png)
    _EMBED_ASSET(font_ttf assets/font.ttf)
    _EMBED_ASSET(theme_mp3 assets/theme.mp3)
    _EMBED_ASSET(title_mp3 assets/title_screen.mp3)

    set(ASSETS_HEADER "${CMAKE_BINARY_DIR}/assets_embedded.h")
    file(WRITE "${ASSETS_HEADER}" "// Auto-generated by CMake — do not edit\n#pragma once\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${block0_name}[] = { ${block0_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${block0_name}_len = sizeof(${block0_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${block1_name}[] = { ${block1_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${block1_name}_len = sizeof(${block1_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${block2_name}[] = { ${block2_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${block2_name}_len = sizeof(${block2_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${block3_name}[] = { ${block3_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${block3_name}_len = sizeof(${block3_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${block4_name}[] = { ${block4_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${block4_name}_len = sizeof(${block4_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${block5_name}[] = { ${block5_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${block5_name}_len = sizeof(${block5_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${block6_name}[] = { ${block6_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${block6_name}_len = sizeof(${block6_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${wall_img_name}[] = { ${wall_img_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${wall_img_name}_len = sizeof(${wall_img_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${scboard_img_name}[] = { ${scboard_img_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${scboard_img_name}_len = sizeof(${scboard_img_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${title_screen_name}[] = { ${title_screen_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${title_screen_name}_len = sizeof(${title_screen_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${font_ttf_name}[] = { ${font_ttf_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${font_ttf_name}_len = sizeof(${font_ttf_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${theme_mp3_name}[] = { ${theme_mp3_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${theme_mp3_name}_len = sizeof(${theme_mp3_name});\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char ${title_mp3_name}[] = { ${title_mp3_array} };\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int  ${title_mp3_name}_len = sizeof(${title_mp3_name});\n")
    # block texture table for indexed access
    file(APPEND "${ASSETS_HEADER}" "static const unsigned char *const emb_block_png_data[7] = {\n")
    file(APPEND "${ASSETS_HEADER}" "    ${block0_name}, ${block1_name}, ${block2_name}, ${block3_name},\n")
    file(APPEND "${ASSETS_HEADER}" "    ${block4_name}, ${block5_name}, ${block6_name}\n")
    file(APPEND "${ASSETS_HEADER}" "};\n")
    file(APPEND "${ASSETS_HEADER}" "static const unsigned int emb_block_png_len[7] = {\n")
    file(APPEND "${ASSETS_HEADER}" "    sizeof(${block0_name}), sizeof(${block1_name}), sizeof(${block2_name}),\n")
    file(APPEND "${ASSETS_HEADER}" "    sizeof(${block3_name}), sizeof(${block4_name}), sizeof(${block5_name}),\n")
    file(APPEND "${ASSETS_HEADER}" "    sizeof(${block6_name})\n")
    file(APPEND "${ASSETS_HEADER}" "};\n")
endif()

###############
# The Project #
###############
add_executable(${PROJECT_NAME} ${SOURCES})
target_link_libraries(${PROJECT_NAME} raylib)
target_include_directories(${PROJECT_NAME} PRIVATE ${raygui_SOURCE_DIR}/src)
if(PROJECT_INCLUDE_DIRS)
    target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INCLUDE_DIRS})
endif()

if(EMBED_ASSETS)
    target_compile_definitions(${PROJECT_NAME} PRIVATE EMBED_ASSETS)
    target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_BINARY_DIR}")
endif()

#######################################################################
# Web Configurations                                                  #
#                                                                     #
# Provide a default PLATFORM value to avoid undefined-variable errors #
#######################################################################
if (NOT DEFINED PLATFORM)
    set(PLATFORM "Desktop")
endif()

if (${PLATFORM} STREQUAL "Web")
    set_target_properties(${PROJECT_NAME} PROPERTIES SUFFIX ".html") # Tell Emscripten to build an example.html file.
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -s USE_GLFW=3 -s ASSERTIONS=1 -s WASM=1 -s ASYNCIFY -s GL_ENABLE_GET_PROC_ADDRESS=1")
endif()

#############################################
# macOS Frameworks (Only required on macOS) #
#############################################
if (APPLE)
    target_link_libraries(${PROJECT_NAME}
        "-framework IOKit"
        "-framework Cocoa"
        "-framework OpenGL"
    )
endif()